# llvm-tutorial

./: .gitignore  ELI5.md  LICENSE  README.md
CustomLegacyPass/: MyLegacyPass.cpp
CustomNewPass/: MyNewPass.cpp
samples/: Makefile  cfile.c  cppfile.cpp
src/: CMakeLists.txt
src/CustomLegacyPass/: CMakeLists.txt
src/CustomNewPass/: CMakeLists.txt  MyNewPass.cpp  MyNewPass.h
src/tmp/: cfile.bc  cfile.ll  cppfile.bc  cppfile.ll
